--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.1",
+    "popups": "^1.1.3",
     "socket.io": "^4.4.1"
   }
 }
